2.0.M01
-------
o Added the possibility to set labels on and remove labels from nodes
o Now uses the labels specified in MATCH while matching
o Supports label matching with ("|" syntax) in MATCH
o Added label-based indexes
o Added UNION
o Added CASE
o Added index hints ("USING INDEX")
o START now is optional when using index hints or there is exactly one useable index
o Cypher now uses the label-based indexes to perform lookups
o Profiler now shows which entity producers have been chosen

1.9.RC1 (2013-04-15)
--------------------
o Fixed #578 - problem with profiling queries that use LIMIT
o Fixes #550 - problem when using START after WITH
o Allows single node patterns in MATCH
o Fixes problem for some patterns and all-nodes start points
o Fixes #650 - issue when doing multiple aggregation expressions on the same identifier
o Added timestamp function

1.9.M05 (2013-03-05)
--------------------
o Fixes #450 - Predicates in WHERE are not evaluated correctly for certain patterns
o Fixes problem with null comparisons and optional relationships
o Made it possible to run the parser concurrently
o DISTINCT is now lazy, and keeps the incoming ordering
o Added execution plan descriptions to execution results
o Fixes #464 - getDeletedRelationships does not work for javacompat.ExecutionResult
o Fixes #535 - 'INTERNAL_SORT' columns show when doing RETURN * ORDER BY
o Added experimental profiled query support
o Fixes #489 - CREATE UNIQUE does not work as expected inside FOREACH

1.9.M04 (2013-01-17)
--------------------
o Clearer error message for when aggregations are used in ORDER BY and not in RETURN
o Fixes #394 - Identifiers inside of FOREACH get the wrong type
o Fixes #390 - IN/ANY/NONE/ANY/SINGLE causes RuntimeException for some patterns
o Fixes #387 - Some patterns produced "Unexpected traversal state" in Cypher
o Upgraded the Scala version to 2.10
o Fixes #355 - Collections in collections are still Scala collections instead of Java collections

1.9.M03
-------